[metadata]
name = PyRealtime
version = 0.1.12
author = Eric Whitmire
author-email = emwhit@cs.washington.edu
description = A package for realtime data processing, including reading from serial ports and plotting.
long_description = file: README.md
url = https://github.com/ewhitmire/pyrealtime
keywords = realtime, plotting, serialport, logging, pipeline
license = MIT
platform = any


[options]
packages = find:
install_requires =
    numpy
    matplotlib
test_suite = nose.collector
test_requires =
    nose

[options.extras_require]
serial = pyserial
pygame = pygame
all = pyserial; pygame; pyaudio; scipy